修复归元台无法打开BUG

--- a/build.gradle
+++ b/build.gradle
@@ -95,3 +95,7 @@ publishing {
 tasks.withType(ProcessResources).configureEach {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
+
+tasks.withType(Jar).configureEach {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
